src/snapshots/raoul__tests__get_ast@redefine-variable-type.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/redefine-variable-type.ra
---
Main(([], [], [
    Assignment(false, Id(a), Integer(1)),
    Assignment(false, Id(a), String(2)),
]))
