src/snapshots/raoul__tests__get_ast@return-void-function.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/return-void-function.ra
---
Main(([
    Function(test, VOID, [], [
        Return(Integer(1)),
    ]),
], [
    FunctionCall(test, []),
]))
