src/snapshots/raoul__tests__get_ast@undeclared-function-2.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/undeclared-function-2.ra
---
Main(([], [
    FunctionCall(test, []),
]))
