src/snapshots/raoul__tests__get_ast@undeclared-function.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/undeclared-function.ra
---
Main(([], [
    Assignment(false, Id(a), FunctionCall(test, [])),
]))
