src/snapshots/raoul__tests__get_ast@undeclared-variable-if.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/undeclared-variable-if.ra
---
Main(([], [
    Decision(BinaryOperation(Lt, Id(a), Integer(2)), [Write([Integer(2)])], None),
]))
