src/snapshots/raoul__tests__get_ast@undeclared-variable-while.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/undeclared-variable-while.ra
---
Main(([], [
    While(BinaryOperation(Lt, Id(a), Integer(2)), [Write([Integer(2)])]),
]))
