src/snapshots/raoul__tests__get_ast@undeclared-variable.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/static/undeclared-variable.ra
---
Main(([], [
    Assignment(false, Id(a), Id(b)),
    Assignment(false, Id(c), Id(d)),
]))
