src/snapshots/raoul__tests__get_ast@unexistant-data-frame.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/unexistant-data-frame.ra
---
Main(([], [
    Assignment(false, Id(dataframe), ReadCSV(String(i-dont-exist.csv))),
]))
