src/snapshots/raoul__tests__get_ast@unitialized-element.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/unitialized-element.ra
---
Main(([], [
    Assignment(false, Id(a), ArrayDeclaration(INT, 3, None)),
    Write([ArrayDeclaration(a, Integer(0), None)]),
]))
