src/snapshots/raoul__tests__get_ast@used-before.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/used-before.ra
---
Main(([], [], [
    Write([Id(col)]),
    Assignment(false, Id(col), String(danceability)),
]))
