src/snapshots/raoul__tests__get_ast@weird-return.ra.snap
---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/non-plot/weird-return.ra
---
Main(([], [
    Function(test, INT, [], [
        Return(Integer(1)),
        Decision(BinaryOperation(Lt, Integer(1), Integer(2)), [Return(Integer(2))], None),
    ]),
], [
    Write([FunctionCall(test, [])]),
]))
